<resources>
    <string name="app_name">calculator</string>
    <string name="C">C</string>
    <string name="AC">AC</string>
    <string name="dot">.</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="one">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="Zero">0</string>
</resources>